modules/onboard-app/templates/app-repo-template/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: APP_NAME
  labels:
    istio.io/rev: asm-managed
