modules/onboard-app/templates/app-repo-template/k8s/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: -virtualservice
    namespace: APP_NAME
spec:
    hosts:
    - "APP_NAMEservice.endpoints.<project-id>.cloud.goog"
    gateways:
    - asm-ingress-gw/asm-ingressgateway
    http:
    - route:
      - destination:
          host: APP_NAME
          port:
            number: 80
